packages/portal-style/src/pages/_kb-article.scss
.dp-po-contents {
  margin: 0 0 30px;

  &-title {
    @include typo($s19, 500);
    color: $grey-dark;
    border-bottom: 1px solid $grey;
    padding: 0 0 15px;
    margin: 0 0 15px;
  }

  &-list {
    margin: 0;
    padding: 0;
  }

  &-item {
    list-style: none;
    margin: 0 0 22px;

    &:last-child {
      margin: 0;
    }
  }

  &-link {
    font-size: $h5-font-size;
    color: $grey-dark;
    display: block;
    padding: 0 0 0 20px;
    position: relative;

    &:hover {
      color: $grey-dark;
    }

    &:after {
      border-color: transparent transparent transparent $brand-primary;
      border-style: solid;
      border-width: 8px 0 8px 8px;
      content: "";
      height: 0;
      left: 0;
      position: absolute;
      top: 6px;
      width: 0;
      opacity: 0;
    }

    &.active {
      font-weight: 700;

      &:after {
        opacity: 1;
        ;
      }
    }
  }
}

.dp-po-kbfigure {
  border: 1px solid $grey;
  margin-bottom: 1em;

  &-image {
    outline: 1px solid $grey-light;
    padding: 10px;
  }

  &-figcaption {
    background: $grey-lightest;
    font-size: $p4-font-size;
    padding: 5px 10px;
  }
}

.dp-po-post-content .fr-img-caption .fr-img-wrap {
  border: 1px solid $grey;
  margin-bottom: 1em;
  display: block;

  img {
    outline: 1px solid $grey-light;
    margin: 10px;
    max-width: calc(100% - 20px);
  }

  .fr-inner {
    background: $grey-lightest;
    font-size: $p4-font-size;
    padding: 5px 10px;
    display: block;
  }
}

.dp-po-kb-attachments {
  background: $grey-lightest;
  border-radius: 4px;
  padding: 20px;
  margin: 0;

  &-title {
    color: $grey-dark;
    @include typo($s15);
    margin: 0 0 15px;
  }

  &-list {
    margin: 0 !important;
    padding: 0;
  }

  &-item {
    list-style: none;
    margin-top: 12px;
  }

  &-link {
    display: inline-flex;
    align-items: center;
    color: $brand-primary;

    &:hover {
      color: $brand-primary;
    }

    .dp-po-icon {
      margin: 0 10px 0 0;
      font-size: 26px;
      color: $text-color;
    }

    span {
      margin-left: 5px;
      font-size: 14px;
    }

    .fa-arrow-to-bottom {
      margin-left: 10px;
      color: $brand-primary;
      vertical-align: initial;
    }
  }
}

.dp-po-tab {
  margin: 0 0 20px;
  padding: 0;

  &-item {
    display: inline-block;
    position: relative;
    margin: 0 40px 0 0;

    &:after {
      content: '';
      width: 2px;
      height: 100%;
      position: absolute;
      right: -21px;
      top: 0;
      background: $grey-light;
    }

    &:last-child {
      &:after {
        display: none;
      }
    }
  }

  &-link {
    color: $grey-dark;
    @include typo($s19, 400, 'head');

    &.active {
      color: $text-color;
    }

    &:hover {
      text-decoration: none;
      color: $text-color;
    }
  }
}

.dp-po-divider {
  display: inline-block;

  &-text {
    font-size: 15px;
    color: $text-color;
    position: relative;
    margin-top: 43px;

    &:before,
    &:after {
      width: 2px;
      height: 43px;
      background: $grey-light;
      content: '';
      position: absolute;
      top: -50px;
      left: 6px;
    }

    &:after {
      top: auto;
      bottom: -50px;
    }
  }
}

.dp-po-social-login {
  display: flex;
  align-items: flex-start;

  .btn {
    margin-bottom: 20px;
    margin-left: 0;
  }

  .dp-po-oauth {
    margin: 0 30px;
  }
}

